ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: cicd
---
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    istio-injection: enabled
