svcnode.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
