zabbixnode.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: zabbix-web
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30083
